# platform.core.multimedia.libcamsrcjpegenc-sw-libjpeg

./: Makefile.am  camsrcjpegenc-sw.pc.in  config.h.in  configure  configure.ac
debian/: changelog  control  rules
packaging/: libcamsrcjpegenc-sw-libjpeg.spec
src/: Makefile.am  camsrcjpegenc-sw-libjpeg.c
