SUBDIRS = src

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = camsrcjpegenc-sw.pc

EXTRA_DIST = $(aclocal_DATA)
DISTCLEANFILES = $(pkgconfig_DATA)

MAINTAINERCLEANFILES = Makefile.in \
	               aclocal.m4 configure config.h.in config.sub config.guess \
	               ltmain.sh depcomp missing install-sh mkinstalldirs

